# kline-qml

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  kline_data.csv
qml/: main.qml
qml/components/charts/: CanvasKLineChart.qml  ChartBase.qml  ChartInteraction.qml  ChartTooltip.qml  KLineCanvas.qml
qml/components/data/: KLineDataLoader.qml
resources/data/: sample_kline.csv
scripts/: generate_kline.py
src/: main.cpp
src/core/: KLineDataProvider.cpp  KLineDataProvider.h
